# ecg-noise-detector

./: .gitignore  README.md  setup.cfg
src/ecg_noise_detector/: noiseDetector.py
src/ecg_noise_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ecg_noise_detector/data/: clean_ecg.csv  model_20_05_21.joblib  noisy_ecg.csv
tests/: test_1.py
