[metadata]
name = ecg-noise-detector
version = 0.0.2
author = Yoav Nir
author_email = 11yoav.nir@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Yoav11/ecg-noise-detector
project_urls =
    Bug Tracker = https://github.com/Yoav11/ecg-noise-detector/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    scipy
    joblib
    pandas
    py-ecg-detectors
    scikit-learn ==1.0.1
include_package_data = True

[options.package_data]
* = data/*.csv, data/*.joblib

[options.packages.find]
where = src